# ai-procurement-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  main.py  pdf_processor.py  pyproject.toml  sample_data.py
.cursor/: rules
.github/ISSUE_TEMPLATE/: shape.md  task.md
.github/workflows/: claude-code.yml
